src/objects/Bidder__c.object
<CustomObject>
    <description>DMNY</description>
    <fields>
        <fullName>Apparent_Winning_Bidder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apparent Winning Bidder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Follow_up_Time_Frame__c</fullName>
        <formula>IF(
OR( Opportunity__r.Bid_Date__c &gt;  TODAY() ,
Inactive__c, 
  AND( 
      Apparent_Winning_Bidder__c,
     OR( 
      ISPICKVAL(Daikin_Outcome_Feedback__c ,&apos;Daikin not successful with this bidder&apos;),
      ISPICKVAL(Daikin_Outcome_Feedback__c ,&apos;Daikin successful with this bidder&apos;),
      ISPICKVAL(Daikin_Outcome_Feedback__c , &apos;Received firm commitment to use Daikin&apos;),
      ISPICKVAL(Daikin_Outcome_Feedback__c , &apos;FSE hasn’t followed up yet&apos;)

        )),
      ISPICKVAL( Bidder_Outcome_Feedback__c , &apos;A different bidder is the apparent winning bidder.&apos;),
        NOT(
			OR(
				ISPICKVAL( Opportunity__r.StageName ,&apos;Proposal/Price Quote/Bid&apos;),
				ISPICKVAL(Opportunity__r.StageName ,&apos;Post Bid - Daikin Status Unknown&apos;)
				)
			)
        ),
         0,  
     (IF( (of_Follow_up_Attempts__c&gt;0),
      (NOW()-(DATETIMEVALUE(Opportunity__r.Bid_Date__c)+(19/24)))/ of_Follow_up_Attempts__c,
       (NOW()-(DATETIMEVALUE(Opportunity__r.Bid_Date__c)+(19/24)))/ 1
      ))
      )</formula>
        <label>Average Follow-up Time Frame</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bidder_Account_Number__c</fullName>
        <formula>Bidder_Name__r.Auto_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bidder Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bidder_Account_Owner__c</fullName>
        <description>Record owner for Bidder Account.</description>
        <formula>Bidder_Name__r.Owner.FirstName + &quot; &quot; + Bidder_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record owner for Bidder Account.</inlineHelpText>
        <label>Bidder Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bidder_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DMNY</description>
        <label>Bidder Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bidders</relationshipLabel>
        <relationshipName>Bidders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bidder_Outcome_Feedback__c</fullName>
        <label>Bidder Outcome Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FSE hasn’t followed up yet</fullName>
                    <default>true</default>
                    <label>FSE hasn’t followed up yet</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Bidder is not the winning bidder.</fullName>
                </value>
                <value>
                    <fullName>Bidder is the apparent winning bidder.</fullName>
                </value>
                <value>
                    <fullName>A different bidder is the apparent winning bidder.</fullName>
                </value>
                <value>
                    <fullName>Bidder has abandoned this project.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daikin_Outcome_Feedback__c</fullName>
        <label>Daikin Outcome Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FSE hasn’t followed up yet</fullName>
                    <default>true</default>
                    <label>FSE hasn’t followed up yet</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Daikin not successful with this bidder</fullName>
                </value>
                <value>
                    <fullName>Daikin successful with this bidder</fullName>
                </value>
                <value>
                    <fullName>Received firm commitment to use Daikin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates bidder not successful or no longer active.</description>
        <inlineHelpText>Indicates bidder not successful or no longer active.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Bid_Date__c</fullName>
        <formula>Opportunity__r.Bid_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bidders</relationshipLabel>
        <relationshipName>Bidders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quoted_Price__c</fullName>
        <description>Quoted Price</description>
        <label>Quoted Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Follow_up_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Follow-up Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bidder</label>
    <nameField>
        <label>Bidder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bidders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bidder_Outcome_Feedback_validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL( Bidder_Outcome_Feedback__c , &apos;Bidder is not the winning bidder.&apos;) &amp;&amp; NOT(Inactive__c),
ISPICKVAL( Bidder_Outcome_Feedback__c , &apos;Bidder has abandoned this project.&apos;) &amp;&amp; NOT(Inactive__c))</errorConditionFormula>
        <errorMessage>&quot;Inactive&quot; field is not TRUE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Apparent_Winnig_Bidder</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Bidder_Outcome_Feedback__c , &apos;Bidder is the apparent winning bidder.&apos;) &amp;&amp; NOT(Apparent_Winning_Bidder__c)</errorConditionFormula>
        <errorMessage>Apparent Winning Bidder in not True</errorMessage>
    </validationRules>
</CustomObject>